--- a/assignment3/app-1-dep.yaml
+++ b/assignment3/app-1-dep.yaml
@@ -1,1 +1,19 @@
-app-1-svc.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app-1-dep
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: app-1
+  template:
+    metadata:
+      labels:
+        app: app-1
+    spec:
+      containers:
+      - name: app-1
+        image: ghcr.io/denoslab/ensf400-sample-app:v1
+        ports:
+        - containerPort: 8080
