--- a/assignment3/app-1-ingress.yaml
+++ b/assignment3/app-1-ingress.yaml
@@ -4,6 +4,10 @@ metadata:
   name: app-1-ingress
   labels:
     app: app-1
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/canary: "true"
+    nginx.ingress.kubernetes.io/canary-weight: "70"
 spec:
   rules:
   - http:
