--- a/assignment3/app-2-ingress.yaml
+++ b/assignment3/app-2-ingress.yaml
@@ -2,12 +2,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app-2-ingress
-  label:
+  labels:
     app: app-2
   annotations:
     nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: "30"
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/canary-weight: "30"
 spec:
   rules:
   - http:
